k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: scalabit-challenge-api-svc
spec:
  type: NodePort
  selector:
    app: scalabit-challenge-api
  ports:
    - port: 80
      targetPort: 8080
      nodePort: 30000
