k8s/networkpolicy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: scalabit-api-netpol
  namespace: scalabit-challenge
spec:
  podSelector:
    matchLabels:
      app: scalabit-challenge-api
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - ports:
        - protocol: TCP
          port: 8080
  egress:
    - {}
